# tugas-besar-1-ssr

./: .gitignore  CMakeLists.txt  README.md  temporrary.md
config/default/: property.txt
data/: test.txt  test1.txt  test2.txt
include/core/: AktaInterface.hpp  BoardRenderer.hpp  EntityRenderer.hpp  GameApp.hpp  GameConfig.hpp  GameMenu.hpp  InterfaceRenderer.hpp  Renderer.hpp
include/models/: Auction.hpp  Bank.hpp  Board.hpp  BotPlayer.hpp  Card.hpp  Card.tpp  Dice.hpp  Game.hpp  GameSession.hpp  HumanPlayer.hpp  Player.hpp  Property.hpp  RailroadProperty.hpp  StreetProperty.hpp  Tile.hpp  UtilityProperty.hpp
include/models/Tile/: CardTile.hpp  FestivalTile.hpp  FreeParkingTile.hpp  GoToJailTile.hpp  JailTile.hpp  PropertyTile.hpp  StartTile.hpp  TaxTile.hpp  Tile.hpp
include/utils/: AppException.hpp  Color.hpp  SaveLoadHandler.hpp  TransactionLogger.hpp
include/views/: Button.hpp  Component.hpp  Container.hpp  Label.hpp  Layout.hpp
include/views/raylib-cpp/: CMakeLists.txt
src/: main.cpp
src/core/: AktaInterface.cpp  Bank.cpp  BoardRenderer.cpp  GameApp.cpp  GameMenu.cpp  InterfaceRenderer.cpp  Property.cpp  PropertyTesting.cpp  RailroadProperty.cpp  Renderer.cpp  StreetProperty.cpp  UtilityProperty.cpp
src/models/: Auction.cpp  Bank.cpp  Board.cpp  Card.cpp  CardTile.cpp  Dice.cpp  FestivalTile.cpp  FreeParkingTile.cpp  Game.cpp  GameSession.cpp  GoToJailTile.cpp  JailTile.cpp  Player.cpp  Property.cpp  PropertyTile.cpp  RailroadProperty.cpp  StartTile.cpp  StreetProperty.cpp  TaxTile.cpp  Tile.cpp  UtilityProperty.cpp
src/utils/: AppException.cpp  LoadHandler.cpp  SaveHandler.cpp  SaveLoadHandler.cpp  TransactionLogger.cpp
